fix spacing of headers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1377,10 +1377,10 @@ input, select, textarea {
 					min-width: 7.5rem;
 					height: 2.75rem;
 					line-height: 2.75rem;
-					padding: 0 1.25rem 0 1.45rem;
+					padding: 0 1.rem 0 1.rem;
 					text-transform: uppercase;
 					letter-spacing: 0.2rem;
-					font-size: 0.8rem;
+					font-size: 0.7rem;
 					border-bottom: 0;
 				}
 
